# opsidian

./: .env.example  README.md  main.py  pyproject.toml  sync_slack.py
chroma_langchain_db/: chroma.sqlite3
knowledge_base/: all-stoic_C09FG563PAM.json  slack3.json  slack_2.json  slack_data.json  social_C09FG563R33.json
tools/: search.py
